lägga till grid

--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -10,10 +10,10 @@ $secondary-light: #27ae60;      // Mörk smaragdgrön
 $accent-light-1: #e74c3c;      // Mörk korall
 
 // Colors
-$black: #252c30;
+$black: #261911;
 $light-black: #616161;
 $white: #fff;
-$beige: #f6f5f2;
+$beige: #E1C9C1;
 $gray: #868585;
 $green: #787d62;
 
