--- a/SCSS/components/_header.scss
+++ b/SCSS/components/_header.scss
@@ -30,6 +30,7 @@ header{
       font-family: $openSans;
       font-size: $text;
       font-weight: $medium;
+      color: $black !important;
 
       &:hover{
          text-decoration: underline;
