--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -6,7 +6,9 @@
          "components/footer",
          "components/section1",
          "components/section2",
-         "components/section3";
+         "components/section3",
+         "components/base",
+         "components/gridSection";
 
 body{
    margin: 0;
