--- a/SCSS/components/_hero.scss
+++ b/SCSS/components/_hero.scss
@@ -1,36 +1,41 @@
-// HERO
+/* HERO */
 .ij-hero {
-   padding: 3rem 0 3rem 0 !important;
-   .padding {
-     padding: 0;
-   }
-   &__item {
-     position: relative; /* Add position relative for proper stacking */
-     height: 682px;
-     display: flex;
-     align-items: center;
-   }
-    &__image {
-      height: 100%;
-      object-fit: cover;
-      position: absolute;
-      opacity: 0.8;
-      right: 0;
-   }
-    @media (max-width: 799px) {
-      &__image{
-        //display: none;
-      }
-     }
-   &__content {
-     z-index: 1; /* Ensure content appears above the image */
-     padding: 0 32px;
-     h1 {
-       margin-bottom: 2rem;
-       font-size: $h1;
-     }
-     p {
-       width: 50%;
-     }
-   }
- }
+  position: relative; /* Add relative positioning to the container */
+  overflow: hidden; /* Ensure the image doesn't overflow the container */
+  padding: 0rem 0 3rem 0 !important;
+
+  &__item {
+    position: relative; /* Add relative positioning to the item */
+    display: flex;
+    align-items: flex-end; /* Align items to the bottom */
+    height: 100%;
+    justify-content: center;
+  }
+
+  &__image {
+     opacity: 0.8;
+     width: 100%; /* Make the image fill the container */
+     height: 50vh;
+     object-fit: cover;
+  }
+
+  &__content {
+    z-index: 1; /* Ensure content appears above the image */
+    padding: 0 32px;
+    max-width: 1320px;
+    display: flex;
+    justify-content: end;
+    width: 100%;
+
+    h1 {
+      margin-bottom: 2rem;
+      font-size: $h1;
+    }
+    p {
+      width: 50%;
+    }
+
+    /* Add positioning for the content */
+    position: absolute;
+  }
+}
