--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -30,6 +30,7 @@ header .navbar .nav-link {
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   font-weight: 500;
+  color: #261911 !important;
 }
 header .navbar .nav-link:hover {
   text-decoration: underline;
@@ -54,7 +55,7 @@ header .navbar .dropdown-item i {
   margin-right: 0.5rem;
 }
 header .navbar .dropdown-item:hover {
-  background-color: #f6f5f2;
+  background-color: #E1C9C1;
   text-decoration: underline;
 }
 @media (max-width: 992px) {
@@ -108,28 +109,34 @@ header.fixed img {
   height: 2.5rem;
 }
 
+/* HERO */
 .ij-hero {
-  padding: 3rem 0 3rem 0 !important;
-}
-.ij-hero .padding {
-  padding: 0;
+  position: relative; /* Add relative positioning to the container */
+  overflow: hidden; /* Ensure the image doesn't overflow the container */
+  padding: 0rem 0 3rem 0 !important;
 }
 .ij-hero__item {
-  position: relative; /* Add position relative for proper stacking */
-  height: 682px;
+  position: relative; /* Add relative positioning to the item */
   display: flex;
-  align-items: center;
+  align-items: flex-end; /* Align items to the bottom */
+  height: 100%;
+  justify-content: center;
 }
 .ij-hero__image {
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
   opacity: 0.8;
-  right: 0;
+  width: 100%; /* Make the image fill the container */
+  height: 50vh;
+  object-fit: cover;
 }
 .ij-hero__content {
   z-index: 1; /* Ensure content appears above the image */
   padding: 0 32px;
+  max-width: 1320px;
+  display: flex;
+  justify-content: end;
+  width: 100%;
+  /* Add positioning for the content */
+  position: absolute;
 }
 .ij-hero__content h1 {
   margin-bottom: 2rem;
@@ -265,7 +272,7 @@ header.fixed img {
   top: 50%;
   transform: translate(-50%, -50%);
   font-size: 1.8rem;
-  color: #252c30;
+  color: #261911;
 }
 .ij-footer__icons ul li:hover {
   cursor: pointer;
@@ -295,7 +302,7 @@ header.fixed img {
   height: 100%;
   object-fit: cover;
   border-radius: 2%;
-  border: 1px solid #f6f5f2;
+  border: 1px solid #E1C9C1;
 }
 #section1 .ida-section1 .team-member .round-image-container:hover {
   transition: all 0.3s ease-in-out;
@@ -303,11 +310,11 @@ header.fixed img {
 }
 #section1 .ida-section1 .team-member a {
   width: 2.8rem;
-  background-color: #f6f5f2;
+  background-color: #E1C9C1;
   border: none;
 }
 #section1 .ida-section1 .team-member a i {
-  color: #252c30;
+  color: #261911;
   font-size: 1.5rem;
 }
 #section1 .ida-section1 .team-member a:hover {
@@ -394,13 +401,128 @@ header.fixed img {
   }
 }
 
+h1, h2, h3, h4, p, a {
+  color: #261911;
+}
+
+#gridSection .container-fluid .row .row1 {
+  padding: 16px;
+  position: relative;
+}
+#gridSection .container-fluid .row .row1 img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  max-height: 200px;
+  transition: 0.2s all ease;
+  display: block;
+  opacity: 0.8;
+}
+#gridSection .container-fluid .row .row1 .image-overlay {
+  position: absolute;
+  bottom: 0px;
+  left: 20px;
+  width: 100%;
+  color: #fff;
+  padding: 10px;
+  transition: opacity 0.3s ease;
+}
+#gridSection .container-fluid .row .row1 .image-overlay p {
+  color: #fff;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 300;
+}
+#gridSection .container-fluid .row .row1:hover img {
+  transform: scale(1.1);
+  cursor: pointer;
+  opacity: 1;
+}
+#gridSection .container-fluid .row .row1:hover .image-overlay {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+#gridSection .container-fluid .row .col-md-6 {
+  padding: 16px;
+  position: relative;
+}
+#gridSection .container-fluid .row .col-md-6 img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  max-height: 250px;
+  transition: 0.2s all ease;
+  display: block;
+  opacity: 0.8;
+}
+#gridSection .container-fluid .row .col-md-6 .image-overlay {
+  position: absolute;
+  bottom: 0px;
+  right: 20px;
+  width: 100%;
+  color: #fff;
+  padding: 10px;
+  transition: opacity 0.3s ease;
+}
+#gridSection .container-fluid .row .col-md-6 .image-overlay p {
+  color: #fff;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  text-align: end;
+}
+#gridSection .container-fluid .row .col-md-6:hover img {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+#gridSection .container-fluid .row .col-md-6:hover .image-overlay {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+#gridSection .container-fluid .row .row2 {
+  padding: 16px;
+  position: relative;
+}
+#gridSection .container-fluid .row .row2 img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  max-height: 200px;
+  transition: 0.2s all ease;
+  display: block;
+  opacity: 0.8;
+}
+#gridSection .container-fluid .row .row2 .image-overlay {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  color: #fff;
+  padding: 10px;
+  transition: opacity 0.3s ease;
+}
+#gridSection .container-fluid .row .row2 .image-overlay p {
+  color: #fff;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  text-align: center;
+}
+#gridSection .container-fluid .row .row2:hover img {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+#gridSection .container-fluid .row .row2:hover .image-overlay {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
 body {
   margin: 0;
-  background-color: #f6f5f2;
+  background-color: #E1C9C1;
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 1rem;
-  color: #252c30;
+  color: #261911;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
