--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -8,7 +8,8 @@
          "components/section2",
          "components/section3",
          "components/base",
-         "components/gridSection";
+         "components/gridSection",
+         "components/cardSection";
 
 body{
    margin: 0;
