--- a/SCSS/components/_header.scss
+++ b/SCSS/components/_header.scss
@@ -102,7 +102,7 @@ header{
    }
    }
 }
-header.fixed {
+header.sticky {
    padding: 0;
    background: $white;
    box-shadow: 0 0 10px 0 rgba(0,0,0,.3);
