--- a/SCSS/components/_header.scss
+++ b/SCSS/components/_header.scss
@@ -11,7 +11,7 @@ header{
    .navbar{
       display: flex;
       justify-content: space-between;
-      padding: 1rem 32px;
+      padding: 16px 32px;
       margin: 0 auto; 
       transition: all 0.35s ease, padding 0.35s ease;
 
@@ -111,6 +111,7 @@ header.sticky {
    transition: .5s all ease;
    box-shadow: 0 0 10px 1px rgba(0,0,0,0.1);
    position: fixed;
+   top: 0px;
 
    img{
       height: 2.5rem;
