--- a/SCSS/components/_section2.scss
+++ b/SCSS/components/_section2.scss
@@ -1,15 +1,48 @@
 .ij-section2 {
+   background-color: white;
    display: flex;
    align-items: center;
    &__container{
+      padding: 4rem 0 !important;
       display: flex;
       align-items: center;
-      h3{
-         font-size: $h3;
-         margin-bottom: 2rem;
-      }
-      p{
-         margin-bottom: 2rem;
+      .ij-section2__text{
+         padding: 2rem 0;
+         display: flex;
+         flex-direction: column;
+         justify-content: space-between;
+         h3{
+            font-size: $h3;
+            margin-bottom: 2rem;
+         }
+         p{
+            margin-bottom: 2rem;
+         }
+         button{
+            all: unset;
+            background-color: $beige;
+            border: 2px solid $beige;
+            padding: 0.5rem 1rem;
+            border-radius: 12px;
+            font-size: 1rem;
+   
+            &:hover{
+               background-color: white;
+               color: black;
+               cursor: pointer;
+            }
+         }
+         a{
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            i{
+               margin-left: 0.5rem;
+            }
+            &:hover{
+               text-decoration: underline;
+            }
+         }
       }
    }
    &__img{
@@ -30,5 +63,10 @@
       &__container{
          display: block;
      }
+     &__img{
+      img{
+         padding: 0 16px
+      }
+   }
    }
 }
