--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -11,7 +11,8 @@
          "components/gridSection",
          "components/cardSection",
          "components/aboutUs",
-         "components/goBack";
+         "components/goBack",
+         "components/moreInfo.scss";
 
 body{
    margin: 0;
@@ -39,7 +40,8 @@ hr {
 }
 
 #gridSection, #section1, #section2, #section3, #cardSection{
-   padding: 4rem 16px;
+   padding: 0 16px;
+   margin: 4rem 0;
 
    @media (max-width: 766px) {
       min-height: unset;
