--- a/SCSS/components/_footer.scss
+++ b/SCSS/components/_footer.scss
@@ -1,7 +1,12 @@
 //FOOTER
 .ij-footer{
-   margin: 4rem 0 0 0;
    background-color: $white;
+   a{
+      text-decoration: none;
+      &:hover{
+         text-decoration: underline;
+      }
+   }
    .row{
       display: flex;
       justify-content: space-between;
@@ -9,13 +14,13 @@
    }
    &__icons{
       ul{
-      padding: 0.5rem 0 !important;  
+      padding: 0 !important;
        list-style: none;
        display: flex;
        
          li{
-            width: 50px;
-            height: 50px;
+            width: 25px;
+            height: 25px;
             background: $white;
             border-radius: 50%;
             opacity: 1;
@@ -25,10 +30,8 @@
 
             i{
                position: absolute;
-               left: 50%;
-               top: 50%;
                transform: translate(-50%, -50%);
-               font-size: 1.8rem;
+               font-size: 1.2rem;
                color: $black;
             }
             &:hover{
