--- a/SCSS/components/_section2.scss
+++ b/SCSS/components/_section2.scss
@@ -7,7 +7,7 @@
       display: flex;
       align-items: center;
       .ij-section2__text{
-         padding: 2rem 0;
+         padding: 2rem 32px;
          display: flex;
          flex-direction: column;
          justify-content: space-between;
