--- a/SCSS/components/_section3.scss
+++ b/SCSS/components/_section3.scss
@@ -13,7 +13,7 @@
          }
       }
       .ij-section3__text{
-         padding: 2rem 0;
+         padding: 2rem 32px;
          display: flex;
          flex-direction: column;
          justify-content: space-between;
