--- a/SCSS/components/_aboutUs.scss
+++ b/SCSS/components/_aboutUs.scss
@@ -34,7 +34,7 @@
             text-decoration: none;
             cursor: pointer;
             text-align: left;
-            margin-bottom: 0.5rem;
+            margin-bottom: 2rem;
             width: 100%;
             &:hover{
                text-decoration: underline;
@@ -47,18 +47,21 @@
 .organisation{
    .row{
       background: url('/assets/img/organisation.jpeg');
+      background: url('https://raw.githubusercontent.com/johanssonida1996/Klarhet/main/assets/img/organisation.jpeg');
       background-size: cover;
    }
 }
 .human{
    .row{
-      background: url('/assets/img/manniskaOchsinne.jpeg');
+      //background: url('/assets/img/manniskaOchsinne.jpeg');
+      background: url('https://raw.githubusercontent.com/johanssonida1996/Klarhet/main/assets/img/manniskaOchsinne.jpeg');
       background-size: cover;
    }
 }
 .learn{
    .row{
       background: url('/assets/img/anna/Lära.webp');
+      background: url('https://raw.githubusercontent.com/johanssonida1996/Klarhet/main/assets/img/anna/L%C3%A4ra.webp');
       background-size: cover;
    }
 }
